--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,53 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+/* #region Header */
+header {
+    display:flex;
+    justify-content: space-between;
+}
+
+.logo {
+    width:80px;
+}
+
+img {
+    max-width: 100%;
+    display: block;
+}
+
+.left {
+    display:flex;
+}
+
+h1 {
+    line-height: 70px;
+}
+
+.right {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+#btn {
+    padding:0 40px;
+    margin-right: 20px;
+}
+/* #endregion Header */
+
+/* #region Main */
+main {
+    background-color: #7fffd4;
+}
+
+.container {
+    width:1000px;
+    margin: auto;
+
+}
