Add grid all the level + footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,3 +61,10 @@ main {
     border: 1px solid;
     line-height: 100px;
 }
+
+/* #endregion Main */
+
+/* Footer */
+footer {
+    padding: 1rem;
+}
